# llm-key-ring

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: audit.yml  ci.yml
crates/lkr-app/: Cargo.toml  tauri.conf.json
crates/lkr-app/src/: main.rs
crates/lkr-cli/: Cargo.toml
crates/lkr-cli/src/: main.rs  util.rs
crates/lkr-cli/src/cmd/: exec.rs  gen.rs  get.rs  harden.rs  init.rs  list.rs  lock.rs  migrate.rs  mod.rs  rm.rs  set.rs  usage.rs
crates/lkr-cli/tests/: cli_tty_guard.rs
crates/lkr-core/: Cargo.toml
crates/lkr-core/examples/: poc_app_password.rs  poc_v030.rs
crates/lkr-core/src/: acl.rs  custom_keychain.rs  error.rs  keymanager.rs  lib.rs  template.rs  usage.rs
crates/lkr-core/tests/: keychain_integration.rs
docs/: SECURITY.md  design-v030.md  plan.md  spike-report-v4.md
