[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Iori Yoshida <yottayoshida@users.noreply.github.com>"]
repository = "https://github.com/yottayoshida/llm-key-ring"

[workspace.dependencies]
keyring = { version = "3", features = ["apple-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
zeroize = { version = "1", features = ["derive"] }
security-framework = "3"
core-foundation = "0.10"
security-framework-sys = "2"
