[workspace]
members = ["crates/lkr-core", "crates/lkr-cli"]
resolver = "2"

[workspace.package]
version = "0.3.4"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Iori Yoshida <yottayoshida@users.noreply.github.com>"]
repository = "https://github.com/yottayoshida/llm-key-ring"
homepage = "https://github.com/yottayoshida/llm-key-ring"

[workspace.dependencies]
lkr-core = { version = "0.3.4", path = "crates/lkr-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json", "charset", "system-proxy"] }
chrono = { version = "0.4", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
security-framework = "3"
core-foundation = "0.10"
security-framework-sys = "2"
home = "0.5"
