[package]
name = "lkr-cli"
description = "CLI for LLM Key Ring — manage LLM API keys via macOS Keychain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "lkr"
path = "src/main.rs"

[dependencies]
lkr-core = { path = "../lkr-core" }
clap = { version = "4", features = ["derive"] }
rpassword = "5"
arboard = "3"
serde_json = { workspace = true }
tokio = { workspace = true }
zeroize = { workspace = true }
