[package]
name = "lkr-core"
description = "Core library for LLM Key Ring — KeyStore, TemplateGen, UsageTracker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
keyring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
zeroize = { workspace = true }
security-framework = { workspace = true }
core-foundation = { workspace = true }
security-framework-sys = { workspace = true }
